# ValkyrieEngineCommon

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
docs/html/: ConstexprWrapper_8hpp.html  ConstexprWrapper_8hpp_source.html  Content_8hpp_source.html  Matrix_8hpp_source.html  Quaternion_8hpp.html  Quaternion_8hpp_source.html  Transform_8hpp_source.html  Types_8hpp_source.html  VMath_8hpp.html  VMath_8hpp_source.html  ValkyrieEngineCommon_8hpp_source.html  Vector_8hpp_source.html  annotated.html  classes.html  classvlk_1_1Area-members.html  classvlk_1_1Area.html  classvlk_1_1Color-members.html  classvlk_1_1Color.html  classvlk_1_1ConstexprWrapper-members.html  classvlk_1_1ConstexprWrapper.html  classvlk_1_1ConstexprWrapper_3_01void_01_4-members.html  classvlk_1_1ConstexprWrapper_3_01void_01_4.html  classvlk_1_1Content-members.html  classvlk_1_1Content.html  classvlk_1_1Matrix3-members.html  classvlk_1_1Matrix3.html  classvlk_1_1Matrix4-members.html  classvlk_1_1Matrix4.html  classvlk_1_1MatrixBase-members.html  classvlk_1_1MatrixBase.html  classvlk_1_1Point-members.html  classvlk_1_1Point.html  classvlk_1_1Quaternion-members.html  classvlk_1_1Quaternion.html  classvlk_1_1Transform2D-members.html  classvlk_1_1Transform2D.html  classvlk_1_1Transform3D-members.html  classvlk_1_1Transform3D.html  classvlk_1_1Vector2-members.html  classvlk_1_1Vector2.html  (+20 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+5 more)
docs/latex/: ConstexprWrapper_8hpp.tex  Quaternion_8hpp.tex  VMath_8hpp.tex  annotated.tex  classvlk_1_1Area.tex  classvlk_1_1Color.tex  classvlk_1_1ConstexprWrapper.tex  classvlk_1_1ConstexprWrapper_3_01void_01_4.tex  classvlk_1_1Content.tex  classvlk_1_1Matrix3.tex  classvlk_1_1Matrix4.tex  classvlk_1_1MatrixBase.tex  classvlk_1_1Point.tex  classvlk_1_1Quaternion.tex  classvlk_1_1Transform2D.tex  classvlk_1_1Transform3D.tex  classvlk_1_1Vector2.tex  classvlk_1_1Vector3.tex  classvlk_1_1Vector4.tex  classvlk_1_1VectorBase.tex  files.tex  hierarchy.tex  refman.tex  structvlk_1_1Content_1_1LoadEvent.tex  structvlk_1_1Content_1_1UnloadEvent.tex  structvlk_1_1IsSpecialization.eps  structvlk_1_1IsSpecialization.tex  structvlk_1_1IsSpecialization_3_01Primary_3_01Args_8_8_8_01_4_00_01Primary_01_4.eps  structvlk_1_1IsSpecialization_3_01Primary_3_01Args_8_8_8_01_4_00_01Primary_01_4.tex
include/ValkyrieEngineCommon/: ConstexprWrapper.hpp  Content.hpp  Matrix.hpp  Quaternion.hpp  Transform.hpp  Types.hpp  VMath.hpp  ValkyrieEngineCommon.hpp  Vector.hpp
src/: ValkyrieEngineCommon.cpp  Vector.cpp
test/: CMakeLists.txt  TestValues.hpp  Vector2.cpp  Vector3.cpp
test/Content/: CMakeLists.txt  Content.cpp
test/Content/content/: TestCase1  TestCaseR
test/Content/other_content/: TestCase2
test/Matrix/: CMakeLists.txt  Matrix3.cpp  Matrix4.cpp  Quaternion.cpp
test/Transform/: CMakeLists.txt  Transform2D.cpp  Transform3D.cpp
test/VMath/: CMakeLists.txt  VMath.cpp
test/Vector/: CMakeLists.txt  Point.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
